test/integration/page-config/pages/invalid/invalid-property.js
const InvalidProperty = () => <p>hello world</p>
// export const config = { amp() {} }

export default InvalidProperty
